Done with static pages

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,2 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+    <h1>Scripting</h1>
+    <p>Scripting is a web application tool to write scripts for mainly web Tv produtions.</p>
