Seitenlayout und User login mit devise

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
  <h1>Scripting</h1>
     <p>This is the Homepage for the WebTV scripting tool Scripting.</p>
 
-    <%= link_to "Sign up now!", '#', :class=>'signup_button round' %>
+    <%= link_to "Sign up now!", new_user_registration_path, :class=>'signup_button round' %>
