--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -1,2 +1,8 @@
 <h1>Videos#index</h1>
-<p>Find me in app/views/videos/index.html.erb</p>
+<ul>
+<%= @videos.each do |video| %>
+  <li><%= video.title %> --- <%= video.format %> --- <%= video.duration %> --- <%= video.user.person.firstname %> <%= video.user.person.name %> --- status</li>
+<% end %>
+</ul>
+<%= link_to 'back', videos_showmy_path %>
+
