--- a/app/views/videos/show.html.erb
+++ b/app/views/videos/show.html.erb
@@ -1,2 +1,3 @@
 <h1>Videos#show</h1>
-<p>Find me in app/views/videos/show.html.erb</p>
+<p>angelegtes Video</p>
+<p><%= @video.id %>: <%= @video.title %>: <%= @video.format %></p>
