--- a/app/views/takes/edit.html.erb
+++ b/app/views/takes/edit.html.erb
@@ -1,2 +1,10 @@
-<h1>Take bearbeiten</h1>
-<%= render 'form' %>
+<div class="row-fluid">
+  <div class="span2">
+    
+  </div>
+
+  <div class="span10">
+    <h1>Take bearbeiten</h1>
+    <%= render 'form' %>
+  </div>
+</div>
