--- a/app/views/treatments/_form.html.erb
+++ b/app/views/treatments/_form.html.erb
@@ -7,14 +7,18 @@
   </div>
 
   <div class="fields">
+    <% if @treatment.main_character && @treatment.main_character.person %>
+      <%= f.label :main_character %>
+      <%= @treatment.main_character.charactername %>: <%= @treatment.main_character.person.name %>
+    <% else %>
     <%= fields_for @treatment.main_character do |char| %>
       <%= char.label :charactername %><br>
       <%= char.text_field :charactername %>
     
       <%= char.label "Person", :person_name %>
-      <%= char.text_field :person_name %>
-      <%= char.hidden_field :person_id %>
+      <%= char.autocomplete_field :person_name, autocomplete_person_name_characters_path %>
       <%= link_to "neue Person anlegen", new_person_path %>
+    <% end %>
     <% end %>
   </div>
 
