--- a/app/views/addresses/new.html.erb
+++ b/app/views/addresses/new.html.erb
@@ -1,2 +1,10 @@
-<h1>Addresses#new</h1>
-<p>Find me in app/views/addresses/new.html.erb</p>
+<div class="row-fluid">
+  <div class="span2">
+    
+  </div>
+
+  <div class="span10">
+    <h1>Addresses#new</h1>
+    <%= render 'form' %>
+  </div>
+</div>
