--- a/app/views/technical_items/index.html.erb
+++ b/app/views/technical_items/index.html.erb
@@ -27,5 +27,7 @@
   </tr>
 <% end %>
 </table>
+<%= will_paginate @technical_items %>
 <%= link_to "Neues Gerät anlegen", new_technical_item_path %>
+</div>
 </div>
