--- a/app/views/videos/contacts.html.erb
+++ b/app/views/videos/contacts.html.erb
@@ -48,6 +48,6 @@
 	  </tr>
       <% end %>
     </table>
-    <%= link_to "Zurück", :back %>
+    <%= link_to "Zurück", edit_video_path(@video) %>
   </div>
 </div>
