--- a/app/views/videos/edit.html.erb
+++ b/app/views/videos/edit.html.erb
@@ -10,31 +10,70 @@
 	  <%= link_to 'Video löschen', video_path(@video), :method=>:delete, :confirm => 'Are you sure?' %>
 	<% end %>
       </div>
+      <br>
+      <div class="advise">
+	<% if @video.state == "proposed_idea" && current_user==@video.advisor %>
+	    Bitte gib den Beitrag zur Bearbeitung des Treatments frei. | 
+	  <%= link_to "Freigeben", accept_idea_video_path(@video) %>
+	<% elsif @video.state == "accepted_idea" && current_user!=@video.advisor %>
+	    Zeit, ein Treatment auszuarbeiten!
+	  <%= link_to "Treatment ist fertig.", fin_treat_video_path(@video) %>
+	<% elsif @video.state == "treatment_finished" && current_user==@video.advisor %>
+	  Bitte gib den Beitrag zur Produktion frei oder hinterlasse einen Kommentar. | 
+	  <%= link_to "Freigeben", acc_treat_video_path(@video) %>
+	<% elsif @video.state == "accepted_treatment" && current_user!=@video.advisor %>
+	  Erstelle ein Script und leg los mit der Produktion. | 
+	  <%= link_to "Beitrag ist fertig.", fin_prod_video_path(@video) %>
+	<% elsif @video.state == "production_finished" && current_user==@video.advisor %>
+	  Bitte gib den Beitrag zur Fertigstellung frei. | 
+	  <%= link_to "Freigeben", acc_prod_video_path(@video) %>
+	<% elsif @video.state == "accepted_production" && current_user!=@video.advisor %>
+	  Bitte stell alle Unterlagen zusammen und schreib einen Kurztext zum Beitrag. | 
+	  <%= link_to "Fertig zur Ausstrahlung", fin_vid_video_path(@video) %> 
+	<% elsif @video.state == "video_finished" && current_user==@video.advisor %>
+	  Bitte Sendedatum bzw. Archivnummer eintragen. | 
+	  <%= link_to "Archivieren", arch_vid_video_path(@video) %>
+	<% else %>
+	<%= @video.hint %>
+	<% end %>
+      </div>
+
+      <% if @video.state == "accepted_production" %>
+	<div class ="fields">
+	  <%= f.label :short_text %>
+	  <%= t.text_area :short_text, :rows => 10 %>
+	</div>
+      <% end %>
 
       <div class="fields">
 	<%= f.label :format %>
 	<%= @video.format %>
       </div>
+
       <div class="fields">
 	<%= f.label "gehört zu Serie" %>
 	<%= f.collection_select :serial_id, Serial.where('for_shows' => false), :id, :title, {:include_blank => true} %> | 
 	<%= link_to "Serie anlegen", new_serial_path %>
       </div>
+
       <div class="fields">
 	<%= f.label 'ist Teil der Sendung' %>
 	<% if @video.show %>
 	  <%= @video.show.topic %> am <%= @video.show.date %>
 	<% end %>
       </div>
+
       <div class="fields">
 	<%= f.label :duration %>
 	supposed: <b><%= nice_time(@video.supposed_duration) %> Min</b> / 
 	actual: <b><%= nice_time(@video.duration) %> Min</b>
       </div>
+
       <div class="fields">
 	<%= f.label 'responsible Person' %>
 	<%= @video.user.person.name %>
       </div>
+
       <div class="fields">
 	<%= f.label "Betreuer wählen" %>
 	<% if @video.advisor_id == nil %>
