--- a/app/views/videos/showmy.html.erb
+++ b/app/views/videos/showmy.html.erb
@@ -8,7 +8,7 @@
     <% if current_user.advisor? %>
       <div class='table'>
 	<h3>Meine Sendungen</h3>
-	<table>
+	<table width="80%">
 	  <tr>
 	    <th>Titel</th>
 	    <th>Thema</th>
@@ -25,12 +25,33 @@
 	  <% end %>
 	</table>
       </div>
-    <% end %>
-
-
+<hr>
+      <div class='table'>
+	<h3>Beiträge, die ich betreue</h3>
+	<table width="80%">
+	  <tr>
+	    <th>Titel</th>
+	    <th>verantwortlich</th>
+	    <th>Sendung</th>
+	    <th>Status</th>
+	  </tr>
+	  <% @supervised.each do |video| %>
+	    <% if video %>
+	      <tr>
+		<td><%= link_to video.title, edit_video_path(video) %></td>
+		<td><%= video.user.person.name %></td>
+		<td>-</td>
+		<td><%= video.state %></td>
+	      </tr>
+	    <% end %>
+	  <% end %>
+	</table>
+      </div>
+     <% end %>
+<hr>
     <div class='table'>
-      <h3>Meine Beiträge</h3>
-      <table>
+      <h3>Eigene Beiträge</h3>
+      <table width="80%">
 	<tr>
 	  <th>Titel</th>
 	  <th>verantwortlich</th>
@@ -43,7 +64,7 @@
 	      <td><%= link_to video.title, edit_video_path(video) %></td>
 	      <td><%= video.user.person.name %></td>
 	      <td>-</td>
-	      <td></td>
+	      <td><%= video.state %></td>
 	    </tr>
 	  <% end %>
 	<% end %>
